# GriffonAD

./: .gitignore  ChangeLog.txt  MANIFEST.in  README.md  config.ml  config.py  griffon.py  pyproject.toml  requirements.txt
assets/: style.css
doc/: config.md  require.md  supported.md
griffonad/: config.ml  config.py  griffon.py
griffonad/lib/: actions.py  actionutils.py  consts.py  database.py  expression.py  graph.py  ml.py  print.py  require.py  runner.py  sysvol.py  utils.py
griffonad/templates/: ASREPRoasting.jinja2  AddComputer.jinja2  AddGMSAReader.jinja2  AddKeyCredentialLink.jinja2  AddMember.jinja2  AllowedToAct.jinja2  AllowedToDelegate.jinja2  AllowedToDelegateToAny.jinja2  BlankPassword.jinja2  CanRDP.jinja2  CanRDP_RegSave.jinja2  CanRDP_plus_SeBackupPrivilege.jinja2  DCSync.jinja2  DaclAccountRestrictions.jinja2  DaclAllowedToAct.jinja2  DaclFullControl.jinja2  DaclInitialProgram.jinja2  DaclKeyCredentialLink.jinja2  DaclMemberShips.jinja2  DaclResetPassword.jinja2  DaclSelf.jinja2  DaclServicePrincipalName.jinja2  DaclUserAccountControl.jinja2  EnableNP.jinja2  EnableUser.jinja2  ForceChangePassword.jinja2  GPOAddLocalAdmin.jinja2  GPODisableDefender.jinja2  GPOImmediateTask.jinja2  GPOLogonScript.jinja2  Kerberoasting.jinja2  LSASS_dumper.jinja2  RBCD.jinja2  ReadGMSAPassword.jinja2  (+17 more)
lab/: README.md  create.ps1
lib/: actions.py  actionutils.py  config.ml  consts.py  database.py  expression.py  fakedb.py  graph.py  ml.py  print.py  require.py  runner.py  sysvol.py  utils.py
tools/: addspn.py  aesKrbKeyGen.py  attr.py  dacledit.py  getname.py  gpttmpl.py  ldap_auth.py  logonscript.py  mergeGUID.py  pol.json  readgmsa.py  scriptsini.py  toggleNP.py
(+17 files in other folders)
